[gd_scene load_steps=4 format=3 uid="uid://bwfg2vwo2l1ua"]

[ext_resource type="Script" path="res://Puddle.gd" id="1_krfs8"]
[ext_resource type="Texture2D" uid="uid://bjy2g6iu3gq28" path="res://sprites/cave.png" id="2_rmmlt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt8sj"]
size = Vector2(16, 8)

[node name="Puddle" type="Area2D"]
script = ExtResource("1_krfs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_gt8sj")

[node name="Cave" type="Sprite2D" parent="."]
texture = ExtResource("2_rmmlt")
hframes = 9
vframes = 9
frame = 23

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
